# crossfire

./: .cursorignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  crossfire.toml  cspell.json  pricing.json  pyproject.toml
.cursor/: hooks.json  rules.md
.cursor/hooks/: format-and-lint.sh
.cursor/rules/: architecture.mdc  error-handling.mdc  naming.mdc  planning.mdc  prompts.mdc  style.mdc  testing.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr-checks.yml
crossfire/: cli.py
crossfire/core/: archive.py  compression.py  config.py  domain.py  exclamations.py  logging.py  openrouter.py  orchestrator.py  pricing.py  progress.py  prompts.py  reviewers.py  search.py  simulation.py  tokens.py
crossfire/ui/: tui.py
docs/: launch-announcement-prompt.md  launch-announcement-qec.md  launch-announcement-step-1-output.md  launch-announcement-step-1-write-mode.md  launch-announcement-step-2-edit-mode.md  launch-announcement-step-2-output.md  launch-announcement-tighten.md
scripts/: check-all.sh
tests/: conftest.py  helpers.py  test_clean.py  test_code_mode.py  test_compression.py  test_config.py  test_dry_run.py  test_edit_mode.py  test_failure_handling.py  test_independence.py  test_pipeline_sequence.py  test_pricing.py  test_review_triage.py  test_search.py  test_tokens.py  test_writer_mode.py
