[project]
name = "crossfire"
version = "0.1.0"
description = "Multi-agent adversarial refinement orchestrator (i.e. Ralph Wiggum on 'roids)"
maintainers = [{name = "Ian Reppel", email = "web@ianreppel.org"}]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "tiktoken>=0.7",
    "rich>=13.7",
    "click>=8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "docformatter>=1.7",
    "pre-commit>=3.7",
    "mypy>=1.10",
]

[project.scripts]
crossfire = "crossfire.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.docformatter]
recursive = true
wrap-summaries = 120
wrap-descriptions = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.coverage.run]
source = ["crossfire"]
omit = ["crossfire/py.typed"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
